# flask-template

./: Makefile  README.md  pyproject.toml  run.py
ops/docker/: Dockerfile.local  docker-compose.yml
ops/scripts/: start.sh
src/flask_template/api/: bootstrap.py
src/flask_template/api/routes/: status.py
src/flask_template/shared/domain/: aggregate.py  vo.py
src/flask_template/shared/domain/bus/: command.py  event.py  query.py
src/flask_template/shared/infrastructure/bus/inmemory/: query.py
src/flask_template/shared/infrastructure/bus/rabittmq/: command.py
src/flask_template/shared/infrastructure/persistence/: postgresql.py
src/flask_template/shared/presentation/: controller.py  dto.py
