[tool.poetry]
name = "flask-template"
version = "0.1.0"
description = ""
authors = ["Julio Perdiguer <julio.perdiguer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
celery = "^5.4.0"
flasgger = "^0.9.7.1"
mypy = "^1.11.2"
black = "^24.8.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
